Cookie consent z-index fix

--- a/css/main.css
+++ b/css/main.css
@@ -999,7 +999,7 @@ input [type="button"]:focus {
   transition: transform 0.6s cubic-bezier(0.215, 0.61, 0.355, 1);
   transition: transform 0.6s cubic-bezier(0.215, 0.61, 0.355, 1), -webkit-transform 0.6s cubic-bezier(0.215, 0.61, 0.355, 1);
   width: 400px;
-  z-index: 3;
+  z-index: 5;
 }
 
 @media only screen and (max-width: 992px) {
@@ -1019,7 +1019,6 @@ input [type="button"]:focus {
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.25);
-  z-index: 2;
 }
 
 #consent-popup .consent-popup-inner-wrapper {
@@ -1035,7 +1034,6 @@ input [type="button"]:focus {
       -ms-flex-align: start;
           align-items: flex-start;
   position: relative;
-  z-index: 3;
   background-color: #ffffff;
 }
 
