--- a/sass/components/_cookie-consent.scss
+++ b/sass/components/_cookie-consent.scss
@@ -6,7 +6,7 @@
   box-shadow: 0 3.2px 6.4px rgba(0, 0, 0, 0.1);
   transition: transform 0.6s cubic-bezier(0.215, 0.61, 0.355, 1);
   width: 400px;
-  z-index: 3;
+  z-index: 5;
   @include for-tablet() {
     bottom: 0;
     right: 0;
@@ -21,7 +21,6 @@
     right: 0;
     bottom: 0;
     background-color: rgba(0,0,0,0.25);
-    z-index: 2;
   }
   .consent-popup-inner-wrapper {
     padding: $--spacing-m;
@@ -29,7 +28,6 @@
     flex-direction: column;
     align-items: flex-start;
     position: relative;
-    z-index: 3;
     background-color: $white;
     .consent-close {
       position: absolute;
